data/issues_nolabel/nolabel_test_3349.txt
-mavx2 or -mavx prevents eigen from compiling

I'm compiling the master branch of TensorFlow as follows:

bazel build -c opt --copt=-mavx2 --config=cuda //tensorflow/tools/pip_package:build_pip_package

and receive the error:

ERROR: /tmp/tensorflow/tensorflow/contrib/ffmpeg/BUILD:22:1: C++ compilation of rule '//tensorflow/contrib/ffmpeg:decode_audio_op_cc' failed: crosstool_wrapper_driver_is_not_gcc failed: error executing command third_party/gpus/crosstool/clang/bin/crosstool_wrapper_driver_is_not_gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -fPIE -Wall -Wunused-but-set-parameter -Wno-free-nonheap-object ... (remaining 57 argument(s) skipped): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
In file included from ./third_party/eigen3/unsupported/Eigen/CXX11/FixedPoint:36:0,
from ./tensorflow/core/framework/types.h:27,
from ./tensorflow/core/framework/type_traits.h:22,
from ./tensorflow/core/framework/allocator.h:25,
from ./tensorflow/core/framework/op_kernel.h:22,
from tensorflow/contrib/ffmpeg/decode_audio_op.cc:23:
./third_party/eigen3/unsupported/Eigen/CXX11/src/FixedPoint/PacketMathAVX2.h:347:8: error: 'scalar_multiple2_op' is not a class template
struct scalar_multiple2_op<QInt32, double> {
^
./third_party/eigen3/unsupported/Eigen/CXX11/src/FixedPoint/PacketMathAVX2.h:347:44: error: explicit specialization of non-template 'Eigen::internal::scalar_multiple2_op'
struct scalar_multiple2_op<QInt32, double> {
^
./third_party/eigen3/unsupported/Eigen/CXX11/src/FixedPoint/PacketMathAVX2.h:369:23: error: 'Eigen::internal::scalar_multiple2_op' is not a template
struct functor_traits<scalar_multiple2_op<QInt32, double>> {
^
In file included from ./tensorflow/core/framework/op_kernel.h:22:0,
from tensorflow/contrib/ffmpeg/decode_audio_op.cc:23:
./tensorflow/core/framework/allocator.h: In member function 'virtual std::size_t tensorflow::Allocator::RequestedSize(void_)':
./tensorflow/core/framework/allocator.h:155:3: warning: control reaches end of non-void function [-Wreturn-type]
}
^
In file included from ./tensorflow/core/framework/op_kernel.h:25:0,
from tensorflow/contrib/ffmpeg/decode_audio_op.cc:23:
./tensorflow/core/framework/device_base.h: In member function 'virtual tensorflow::Allocator_ tensorflow::DeviceBase::GetAllocator(tensorflow::AllocatorAttributes)':
./tensorflow/core/framework/device_base.h:151:3: warning: control reaches end of non-void function [-Wreturn-type]
}
^
./tensorflow/core/framework/device_base.h: In member function 'virtual const tensorflow::DeviceAttributes& tensorflow::DeviceBase::attributes() const':
./tensorflow/core/framework/device_base.h:182:3: warning: control reaches end of non-void function [-Wreturn-type]
}
^

/proc/cpuinfo shows my CPU has avx2 support:

processor       : 31
model name      : Intel(R) Xeon(R) CPU E5-2630 v3 @ 2.40GHz
flags           : fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush dts acpi mmx fxsr sse sse2 ss ht tm pbe syscall nx pdpe1gb rdtscp lm constant_tsc arch_perfmon pebs bts rep_good nopl xtopology nonstop_tsc aperfmperf eagerfpu pni pclmulqdq dtes64 monitor ds_cpl vmx smx est tm2 ssse3 fma cx16 xtpr pdcm pcid dca sse4_1 sse4_2 x2apic movbe popcnt tsc_deadline_timer aes xsave avx f16c rdrand lahf_lm abm ida arat epb pln pts dtherm tpr_shadow vnmi flexpriority ept vpid fsgsbase tsc_adjust bmi1 avx2 smep bmi2 erms invpcid cqm xsaveopt cqm_llc